--- a/style.css
+++ b/style.css
@@ -18,4 +18,8 @@ p{
     width: 300px;
     padding: 10px;
 }
-
+h1{ font-fmaily: "Times New Roman", Times, serif; 
+    text-align:center;
+    background-color: blue;
+    width: 100px;
+}
