--- a/style.css
+++ b/style.css
@@ -17,9 +17,12 @@ p{
      background-color: #80ced6;
     width: 300px;
     padding: 10px;
+    margin:auto;
 }
 h1{ font-fmaily: "Times New Roman", Times, serif; 
     text-align:center;
-    background-color: blue;
+    background-color: cyan;
     width: 100px;
+    text-color: white;
+    margin: auto;
 }
