--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ p{
     width: 300px;
     padding: 10px;
     margin:auto;
+    font-size: 15px;
 }
 h1{ font-fmaily: "Times New Roman", Times, serif; 
     text-align:center;
